Fix T67712: cryptomatte sockets created in wrong order in some cases

Simplify the logic and always create node outputs in the order specified
by the render engine, I can't see a reason why built-in passes must be
first.